--- a/ProfileMatch.Components/User/UserAccount.razor
+++ b/ProfileMatch.Components/User/UserAccount.razor
@@ -53,5 +53,5 @@
 }
 else
 {
-   <MudProgressLinear Indeterminate="true"></MudProgressLinear>
+   <MudProgressLinear Color="Color.Primary" Indeterminate="true" />
 }
