--- a/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
@@ -1,6 +1,6 @@
-﻿ <MudGrid Spacing="0" Class="d-flex justify-space-between">
+﻿<MudGrid Spacing="0" Class="d-flex justify-space-between">
     <MudItem xs="12" md="5">
-    <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
+        <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
     </MudItem>
     <MudItem xs="12" md="5">
         <MudTextField Class="d-flex justify-end"
@@ -12,65 +12,74 @@
                       IconSize="Size.Medium"></MudTextField>
     </MudItem>
 </MudGrid>
-@if(ShareResource.IsEn()){
-<MudTable Items="@_openQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="_selectedItem1">
-    <ToolBarContent>
-        <MudButton Variant=Variant.Outlined Size="Size.Small" Color="Color.Primary"OnClick="(()=>OpenQuestionUpdate())">@L["Add New"]</MudButton>
-       <MudSpacer/>
-    </ToolBarContent>
-    <ColGroup>
-        <col />
-        <col style="width: 60%;" />
-        <col />
-        <col />
-    </ColGroup>
-    <HeaderContent>
-        <MudTh>@L["Id"]</MudTh>
-        <MudTh>@L["Name"]</MudTh>
-        <MudTh>@L["Description"]</MudTh>
-        <MudTh>@L["Actions"]</MudTh>
-    </HeaderContent>
-    <RowTemplate>
-        <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
-        <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
-        <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
-        <MudTd DataLabel=@L["Edit"]>
-            <MudButton Variant="Variant.Outlined" Size="Size.Small" Color="Color.Primary" OnClick="((e)=>OpenQuestionUpdate(context))">@L["Edit Question"]</MudButton>
-        </MudTd>
-    </RowTemplate>
-    <PagerContent>
-        <MudTablePager RowsPerPageString=@L["Rows per page"] />
-    </PagerContent>
-</MudTable>
+ @if (_openQuestions is not null || _openQuestions.Count != 0)
+{
+    @if (ShareResource.IsEn())
+    {
+        <MudTable Items="@_openQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="_selectedItem1">
+            <ToolBarContent>
+                <MudButton Variant=Variant.Outlined Size="Size.Small" Color="Color.Primary" OnClick="(()=>OpenQuestionUpdate())">@L["Add New"]</MudButton>
+                <MudSpacer />
+            </ToolBarContent>
+            <ColGroup>
+                <col />
+                <col style="width: 60%;" />
+                <col />
+                <col />
+            </ColGroup>
+            <HeaderContent>
+                <MudTh>@L["Id"]</MudTh>
+                <MudTh>@L["Name"]</MudTh>
+                <MudTh>@L["Description"]</MudTh>
+                <MudTh>@L["Actions"]</MudTh>
+            </HeaderContent>
+            <RowTemplate>
+                <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
+                <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
+                <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
+                <MudTd DataLabel=@L["Edit"]>
+                    <MudButton Variant="Variant.Outlined" Size="Size.Small" Color="Color.Primary" OnClick="((e)=>OpenQuestionUpdate(context))">@L["Edit Question"]</MudButton>
+                </MudTd>
+            </RowTemplate>
+            <PagerContent>
+                <MudTablePager RowsPerPageString=@L["Rows per page"] />
+            </PagerContent>
+        </MudTable>
+    }
+    else
+    {
+        <MudTable Items="@_openQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="_selectedItem1">
+            <ToolBarContent>
+                <MudButton Variant=Variant.Outlined Size="Size.Small" Color="Color.Primary" OnClick="(()=>OpenQuestionUpdate())">@L["Add New"]</MudButton>
+                <MudSpacer />
+            </ToolBarContent>
+            <ColGroup>
+                <col />
+                <col style="width: 60%;" />
+                <col />
+                <col />
+            </ColGroup>
+            <HeaderContent>
+                <MudTh>@L["Id"]</MudTh>
+                <MudTh>@L["Name"]</MudTh>
+                <MudTh>@L["Description"]</MudTh>
+                <MudTh>@L["Actions"]</MudTh>
+            </HeaderContent>
+            <RowTemplate>
+                <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
+                <MudTd DataLabel=@L["Name"]>@context.NamePl</MudTd>
+                <MudTd DataLabel=@L["Description"]>@context.DescriptionPl</MudTd>
+                <MudTd DataLabel=@L["Edit"]>
+                    <MudButton Variant="Variant.Outlined" Size="Size.Small" Color="Color.Primary" OnClick="((e)=>OpenQuestionUpdate(context))">@L["Edit Question"]</MudButton>
+                </MudTd>
+            </RowTemplate>
+            <PagerContent>
+                <MudTablePager RowsPerPageString=@L["Rows per page"] />
+            </PagerContent>
+        </MudTable>
+    }
 }
-else{
-    <MudTable Items="@_openQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="_selectedItem1">
-    <ToolBarContent>
-        <MudButton Variant=Variant.Outlined Size="Size.Small" Color="Color.Primary"OnClick="(()=>OpenQuestionUpdate())">@L["Add New"]</MudButton>
-       <MudSpacer/>
-    </ToolBarContent>
-    <ColGroup>
-        <col />
-        <col style="width: 60%;" />
-        <col />
-        <col />
-    </ColGroup>
-    <HeaderContent>
-        <MudTh>@L["Id"]</MudTh>
-        <MudTh>@L["Name"]</MudTh>
-        <MudTh>@L["Description"]</MudTh>
-        <MudTh>@L["Actions"]</MudTh>
-    </HeaderContent>
-    <RowTemplate>
-        <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
-        <MudTd DataLabel=@L["Name"]>@context.NamePl</MudTd>
-        <MudTd DataLabel=@L["Description"]>@context.DescriptionPl</MudTd>
-        <MudTd DataLabel=@L["Edit"]>
-            <MudButton Variant="Variant.Outlined" Size="Size.Small" Color="Color.Primary" OnClick="((e)=>OpenQuestionUpdate(context))">@L["Edit Question"]</MudButton>
-        </MudTd>
-    </RowTemplate>
-    <PagerContent>
-        <MudTablePager RowsPerPageString=@L["Rows per page"] />
-    </PagerContent>
-</MudTable>
+else
+{
+    <MudProgressLinear Color="Color.Primary" Indeterminate="true" />
 }
