--- a/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
+++ b/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
@@ -1,6 +1,6 @@
 ﻿@if (_loading)
 {
-    <MudProgressCircular Color="Color.Default" Indeterminate="true" />
+    <MudProgressLinear Color="Color.Primary" Indeterminate="true" />
 }
 else
 {
