renamed models to entities

--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
 @using ProfileMatch.Models
-@using ProfileMatch.Models.Models
+@using ProfileMatch.Models.Entities
 
 @using ProfileMatch.Components
 @using ProfileMatch.Services
