--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -9,7 +9,7 @@
 @using ProfileMatch
 @using ProfileMatch.Models
 @using ProfileMatch.Models.Enumerations
-@using ProfileMatch.Models.Models
+@using ProfileMatch.Models.Entities
 @inject IStringLocalizer<LanguageService> L
 @using ProfileMatch.Components
 @using ProfileMatch.Components.Culture
