--- a/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -5,7 +5,7 @@
 @using ProfileMatch.Services
 @using Microsoft.AspNetCore.Localization
 @using Microsoft.Extensions.Localization
-@using ProfileMatch.Models.Models
+@using ProfileMatch.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ProfileMatch
 @addTagHelper *, ProfileMatch.Web.Pages.Shared.ViewComponents
