--- a/ProfileMatch.Web/Pages/_ViewImports.cshtml
+++ b/ProfileMatch.Web/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ProfileMatch.Web.Areas.Identity
-@using ProfileMatch.Models.Models
+@using ProfileMatch.Models.Entities
 @using Microsoft.Extensions.Localization
 @using Microsoft.AspNetCore.Localization
 @using Microsoft.Extensions.Options
