--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using ProfileMatch.Models.Entities
 @using ProfileMatch
 @using ProfileMatch.Components
 @using ProfileMatch.Components.Culture
