--- a/ProfileMatch.Components/Layout/RedirectToLogin.razor
+++ b/ProfileMatch.Components/Layout/RedirectToLogin.razor
@@ -4,7 +4,7 @@
 
     [CascadingParameter] private Task<AuthenticationState> AuthenticationStateTask { get; set; }
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
         var authenticationState = await AuthenticationStateTask;
 
