--- a/ProfileMatch.Sites/UserDashboard.razor
+++ b/ProfileMatch.Sites/UserDashboard.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@page "/{ActiveIndex:int}"
     <AuthorizeView>
         <Authorized>
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["User Dashboard"]</MudText>
