--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -1,8 +1,9 @@
 ﻿@page "/admin/dashboard"
+@page "/admin/dashboard/{ActiveIndex:int}"
 <AuthorizeView Roles="Admin">
     <Authorized>
         <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["admindashboard"]</MudText>
-        <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6" DisableSliderAnimation="true">
+        <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6" DisableSliderAnimation="true" @bind-ActivePanelIndex="ActiveIndex">
             <MudTabPanel Text=@L["Users"]>
                 <AdminPeopleList />
             </MudTabPanel>
